# FPTAptech-T2403M-LBEP

./: CMakeLists.txt
Buoi 8 26-4/: VD1-class.c  VD2-class.c  VD3-class.c  VD4-class.c  VD5-class.c  VD6-class.c  VD7-class.c
Buoi-10 - 5-3/: VD1-skype.c  VD2-skype.c  VD3-skype.c  VD4-skype-2.c  VD4-skype.c
Session 1/: Session 1 - LBEP.docx
Session 2/: Session 2 - LBEP.docx
Session 3/: Ex1 - S3 - LBEP.c  Ex2 - S3 - LBEP.c  Ex3 - S3 - LBEP.c
Session 4/: Ex1 - S4 - LBEP.c  Ex2 - S4 - LBEP.c  Ex3 - S4 - LBEP.c  Ex4 - S4 - LBEP.c  Ex5 - S4 - LBEP.c
Session 5/: Ex1 - S5 - LBEP.c  Ex2 - S5 - LBEP.c  Ex3 - S5 - LBEP.c
Session 6/: Ex4 - S6 - LBEP.c
Session 7/: Ex1 - SS7 - LBEP.c  Ex2 - SS7 - LBEP.c  Ex3 - SS7 - LBEP.c  Ex4 - SS7 - LBEP.c  Ex5 - SS7 - LBEP.c  VD1 - SS7 - LBEP.c  VD2 - SS7 - LBEP.c  VD3 - SS7 - LBEP.c  VD4 - SS7 - LBEP.c  VD5 - SS7 - LBEP.c
Session 8/: Ex2 - S8 - LBEP.c
Thi LBEP 6-5/: Ex1 - LBEP - 6-5-2024 - LE KHANH TUNG.c  Ex2 - LBEP - 6-5-2024 - LE KHANH TUNG.c
VD Tren Lop buoi 2/: VD1.c  VD2.c  VD3.c  VD4.c  VD5.c  VD6.c  VD7 - 12-4-2024.c  VD9 - 12-4-2024.c  Write test 01 - 15-04-2024.c
VD mang/: Ex1-Array.c  Ex2-Array.c  Ex2-skype.c  Ex3-Array.c  Ex4-Array.c  VD1-Array.c  VD2-Array.c
VD mang 2/: Ex1-skype.c  Ex2-skype.c  Ex3-skype.c  Ex4-skype.c  Ex5-skype.c  Ex6-skype.c  Ex7-skype.c  Ex8-skype.c  Ex9-skype.c
VD tren lop buoi 4/: Ex1 - 15-4-2024.c  Ex11 - 15-4-2024.c  Ex2 - 15-4-2024.c  Ex3 - 15-4-2024.c  Ex4 - 15-4-2024.c  Ex5 - 15-4-2024.c  Ex6 - 15-4-2024.c  Ex7 - 15-4-2024.c  Ex8 - 15-4-2024.c
VD tren lop buoi 5/: VD loop 1.c  (+8 more)
(+6 files in other folders)
