cmake_minimum_required(VERSION 3.25)
project(KhanhTung)

set(CMAKE_CXX_STANDARD 14)

add_executable(KhanhTung
        ../KhanhTung/.idea/.gitignore
        ../KhanhTung/.idea/KhanhTung.iml
        ../KhanhTung/.idea/modules.xml
        ../KhanhTung/.idea/vcs.xml
        ../KhanhTung/.idea/workspace.xml
        "Session 4/Ex1 - S4 - LBEP.c" "Session 4/Ex2 - S4 - LBEP.c" "Session 4/Ex3 - S4 - LBEP.c" "Session 4/Ex4 - S4 - LBEP.c" "Session 4/Ex5 - S4 - LBEP.c" "Session 3/Ex1 - S3 - LBEP.c" "Session 3/Ex2 - S3 - LBEP.c" "Session 3/Ex3 - S3 - LBEP.c")
